fixes hero-subtitle text-wrap on mobile screens

--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -47,3 +47,9 @@ a.contact-icon:hover {
   color: $theme-pop-color;
   //   transition: color 0.5s ease;
 }
+
+@media screen and (max-width: 450px) {
+  .hero-subtitle {
+    font-size: 2.5em;
+  }
+}
