--- a/src/styles/ProjectCard.scss
+++ b/src/styles/ProjectCard.scss
@@ -4,10 +4,6 @@
   max-width: 450px;
 }
 
-.increase-card-min-width {
-  // min-width: 250px;
-}
-
 .add-border-radius {
   border-radius: 5px;
 }
